--- a/student/build.gradle
+++ b/student/build.gradle
@@ -50,4 +50,6 @@ dependencies {
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.7'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
 }
