--- a/student/src/main/AndroidManifest.xml
+++ b/student/src/main/AndroidManifest.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="vn.com.ivnd.student">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
-    <application>
+    <application
+        android:label="Cosmetics">
         <activity
-            android:windowSoftInputMode="adjustResize"
-            android:usesCleartextTraffic="true"
             android:name=".LoginActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppTheme"
+            android:usesCleartextTraffic="true"
+            android:windowSoftInputMode="adjustResize" />
 
         <activity
-            android:windowSoftInputMode="adjustResize"
-            android:usesCleartextTraffic="true"
+            android:theme="@style/AppTheme"
             android:name=".ModuleMainActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:usesCleartextTraffic="true"
+            android:windowSoftInputMode="adjustResize"
+            tools:targetApi="m" />
     </application>
 
 </manifest>
